# CUDA_ANN

./: .gitignore  CMakeLists.txt  README.md
experiments/:  Sat Nov 30 19:11:34 2019.csv   Thu Nov 28 00:52:52 2019 (run on small dataset).csv  sample.csv
scripts/: plot.py
src/: CUDA_ANN.cu  csvfile.h  main.cu  read_sift_dataset.cpp  search.cuh  search.hpp  test.cpp  utils.cpp
